--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Sample</title>
+    <title>Kiera Dobbs</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css" />
@@ -38,9 +38,9 @@
               <li class="nav-item">
                 <a href="#projects" class="nav-link">Works</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
-              </li>
+              </li> -->
             </ul>
             <button id="nav-btn" class="nav-btn">
               <img
@@ -64,10 +64,10 @@
           data-aos-duration="1000"
         >
           <div class="hero-content">
-            <span class="hero-greeting"> Hello, I am</span>
-            <h1 class="hero-heading">John Sample</h1>
+            <!-- <span class="hero-greeting"> Hello, I am</span> -->
+            <h1 class="hero-heading">Kiera Dobbs</h1>
             <span class="hero-heading-subtitle"
-              >UI/UX Designer & Software Developer</span
+              >Analyst</span
             >
             <div class="about-social-list">
               <div class="social-links-row">
@@ -85,7 +85,7 @@
                   />
                 </a>
 
-                <a href="#!">
+                <!-- <a href="#!">
                   <img
                     src="img/social_icons/xing.svg"
                     alt="Link to Xing profile"
@@ -101,7 +101,7 @@
                   <img
                     src="img/social_icons/instagram.svg"
                     alt="Link to instagram profile"
-                /></a>
+                /></a> -->
               </div>
             </div>
 
