--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             class="logo"
             data-aos="fade-down"
             data-aos-duration="1000"
-            >J.Sample</a
+            >Kiera W. Dobbs</a
           >
           <nav id="nav" class="nav">
             <ul class="nav-list" data-aos="fade-down" data-aos-duration="1000">
@@ -64,7 +64,7 @@
           data-aos-duration="1000"
         >
           <div class="hero-content">
-            <span class="hero-greeting"> Hello, I am</span>
+            <!-- <span class="hero-greeting"> Hello, I am</span> -->
             <h1 class="hero-heading">Kiera Dobbs</h1>
             <span class="hero-heading-subtitle"
               >Analyst</span
