Removed unnecessary social media links from index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   />
                 </a>
 
-                <a href="#!">
+                <!-- <a href="#!">
                   <img
                     src="img/social_icons/xing.svg"
                     alt="Link to Xing profile"
@@ -101,7 +101,7 @@
                   <img
                     src="img/social_icons/instagram.svg"
                     alt="Link to instagram profile"
-                /></a>
+                /></a> -->
               </div>
             </div>
 
