Added profile picture reference index.html

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
               <a href="#contact" class="btn btn-white">Contact Me</a>
             </div>
           </div>
-          <!-- <div class="hero-img">
+          <div class="hero-img">
             <img
-              src="img/hero/hero.png"
-              alt="Picture of Christian Buehner taken from Unsplash</a>
+              src="img/hero/KieraDobbsUIFHeadshot11.13 - cropped no background.jpeg"
+              alt="Picture of Kiera Dobbs from UIF directory</a>
               "
             />
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
