Removed reference to profile picture index.html

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
               <a href="#contact" class="btn btn-white">Contact Me</a>
             </div>
           </div>
-          <div class="hero-img">
+          <!-- <div class="hero-img">
             <img
-              src="img/hero/KieraDobbsUIFHeadshot11.13 - cropped no background.jpeg"
-              alt="Picture of Kiera Dobbs from UIF directory</a>
+              src="img/hero/hero.png"
+              alt="Picture of - taken from Upsplash</a>
               "
-            />
+            /> -->
           </div>
         </div>
       </div>
