Commented "About" section in index.html

--- a/index.html
+++ b/index.html
@@ -133,19 +133,13 @@
             data-aos-duration="1000"
           >
             <p class="about-descr">
-              Hi, I’m John Sample, a passionate designer and developer
-              specializing in web development, graphic design and photography.
-              With over 10 years of experience, I love transforming ideas into
-              impactful creations that connect and inspire. Outside of work, I
-              enjoy exploring new places, learning new skills and capturing
-              life’s moments. <br /><br />Let’s collaborate and bring your
-              vision to life!
+              THIS PAGE IS A WORK IN PROGRESS!
             </p>
             <div class="about-download-btn">
               <a href="#!" class="btn btn-white">Download CV</a>
             </div>
           </div>
-          <div
+          <!-- <div
             class="about-skills"
             data-aos="fade-up"
             data-aos-duration="1000"
@@ -179,7 +173,7 @@
                 <div class="skill-bar__fill" data-progress="80"></div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="services-row">
           <div
