Added GitHub and LinkedIn links to index.html

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
               <div class="social-links-row">
                 <a href="#!">
                   <img
-                    src="img/social_icons/github.svg"
+                    src="https://github.com/kierwynd"
                     alt="Link to GitHub account"
                   />
                 </a>
 
                 <a href="#!">
                   <img
-                    src="img/social_icons/linkedin.svg"
+                    src="www.linkedin.com/in/kiera-dobbs-2bb536102"
                     alt="Link to linkedin profile"
                   />
                 </a>
