--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
             >
             <div class="about-social-list">
               <div class="social-links-row">
-                <a href="#!">
+                <a href="https://github.com/kierwynd">
                   <img
-                    src="https://github.com/kierwynd"
+                    src="img/social_icons/github.svg"
                     alt="Link to GitHub account"
                   />
                 </a>
 
-                <a href="#!">
+                <a href="www.linkedin.com/in/kiera-dobbs-2bb536102">
                   <img
-                    src="www.linkedin.com/in/kiera-dobbs-2bb536102"
+                    src="img/social_icons/linkedin.svg"
                     alt="Link to linkedin profile"
                   />
                 </a>
