Revised LinkedIn link in index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   />
                 </a>
 
-                <a href="www.linkedin.com/in/kiera-dobbs-2bb536102">
+                <a href="https://www.linkedin.com/in/kiera-dobbs-2bb536102">
                   <img
                     src="img/social_icons/linkedin.svg"
                     alt="Link to linkedin profile"
