Commenting out and clearing in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             class="logo"
             data-aos="fade-down"
             data-aos-duration="1000"
-            >Kiera W. Dobbs</a
+            >K. W. Dobbs</a
           >
           <nav id="nav" class="nav">
             <ul class="nav-list" data-aos="fade-down" data-aos-duration="1000">
@@ -38,9 +38,9 @@
               <li class="nav-item">
                 <a href="#projects" class="nav-link">Works</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact</a>
-              </li>
+              </li> -->
             </ul>
             <button id="nav-btn" class="nav-btn">
               <img
@@ -107,7 +107,7 @@
 
             <div>
               <a href="#projects" class="btn">My Portfolio</a>
-              <a href="#contact" class="btn btn-white">Contact Me</a>
+              <!-- <a href="#contact" class="btn btn-white">Contact Me</a> -->
             </div>
           </div>
           <!-- <div class="hero-img">
@@ -133,7 +133,7 @@
             data-aos-duration="1000"
           >
             <p class="about-descr">
-              THIS PAGE IS A WORK IN PROGRESS!
+              Here are some things about me!
             </p>
             <div class="about-download-btn">
               <a href="#!" class="btn btn-white">Download CV</a>
@@ -183,10 +183,9 @@
             data-aos-delay="50"
           >
             <img class="service-card-img" src="img/services/01.svg" alt="" />
-            <h3 class="service-card-title">UI/UX Design</h3>
+            <h3 class="service-card-title">Skill #1</h3>
             <p>
-              Crafting intuitive and visually appealing user interfaces that
-              enhance experiences through thoughtful, creative designs.
+              Description of skill.
             </p>
           </div>
 
@@ -197,10 +196,9 @@
             data-aos-delay="200"
           >
             <img class="service-card-img" src="img/services/02.svg" alt="" />
-            <h3 class="service-card-title">Frontend Development</h3>
+            <h3 class="service-card-title">Skill #2</h3>
             <p>
-              Developing responsive, accessible, and dynamic websites using
-              modern tools to create seamless, engaging experiences.
+              Description of skill.
             </p>
           </div>
 
@@ -211,10 +209,9 @@
             data-aos-delay="500"
           >
             <img class="service-card-img" src="img/services/03.svg" alt="" />
-            <h3 class="service-card-title">Content Writing</h3>
+            <h3 class="service-card-title">Skill #3</h3>
             <p>
-              Creating compelling and audience-focused content that effectively
-              communicates ideas and delivers meaningful value.
+              Description of skill.
             </p>
           </div>
         </div>
@@ -333,7 +330,7 @@
       </div>
     </section>
 
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container">
         <div class="contact-title">
           <h2 class="title">Contact</h2>
@@ -379,27 +376,27 @@
         </form>
         <div class="response"></div>
       </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
       <div class="container">
         <div class="footer-row">
           <div class="social-links-row footer-social">
-            <a href="#!">
+            <a href="https://github.com/kierwynd">
               <img
                 src="img/social_icons/github.svg"
                 alt="Link to GitHub account"
               />
             </a>
 
-            <a href="#!">
+            <a href="https://www.linkedin.com/in/kiera-dobbs-2bb536102">
               <img
                 src="img/social_icons/linkedin.svg"
                 alt="Link to linkedin profile"
               />
             </a>
 
-            <a href="#!">
+            <!-- <a href="#!">
               <img src="img/social_icons/xing.svg" alt="Link to Xing profile" />
             </a>
 
@@ -413,11 +410,11 @@
               <img
                 src="img/social_icons/instagram.svg"
                 alt="Link to instagram profile"
-            /></a>
+            /></a> -->
           </div>
 
           <div class="footer-copyright">
-            <p>&copy; Copyright John Sample 2024</p>
+            <p>&copy; Copyright Kiera Dobbs 2025</p>
           </div>
         </div>
       </div>
